--- a/src/components/Game/Board.Component.css
+++ b/src/components/Game/Board.Component.css
@@ -78,28 +78,56 @@ td[data-state='ship'] {
   background-color: #3498db;
 }
 /* Navios */
-.ship {
-    display: inline-block;
-    background: #3498db;
-    color: #fff;
-    border-radius: 6px;
-    margin: 8px 0;
-    text-align: center;
-    cursor: grab;
-    font-weight: bold;
-    transition: transform 0.3s, width 0.3s, height 0.3s;
-    /* Tamanho base para navio horizontal */
-    width: calc(40px * var(--size, 1));
-    height: 40px;
-    line-height: 40px;
+/*.ship {*/
+/*    display: inline-block;*/
+/*    background: #3498db;*/
+/*    color: #fff;*/
+/*    border-radius: 6px;*/
+/*    margin: 8px 0;*/
+/*    text-align: center;*/
+/*    cursor: grab;*/
+/*    font-weight: bold;*/
+/*    transition: transform 0.3s, width 0.3s, height 0.3s;*/
+/*    !* Tamanho base para navio horizontal *!*/
+/*    width: calc(40px * var(--size, 1));*/
+/*    height: 40px;*/
+/*    line-height: 40px;*/
+/*}*/
+
+/*.ship {*/
+/*    display: inline-block;*/
+/*    background: #3498db;*/
+/*    color: #fff;*/
+/*    border-radius: 6px;*/
+/*    margin: 8px 0;*/
+/*    text-align: center;*/
+/*    cursor: grab;*/
+/*    font-weight: bold;*/
+/*    transition: transform 0.3s, width 0.3s, height 0.3s;*/
+/*    !* Tamanho base para navio horizontal *!*/
+/*    !*width: calc(40px * var(--size, 1));*!*/
+/*    !*height: 40px;*!*/
+/*    line-height: 40px;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    border: 1px solid white;*/
+/*    box-sizing: border-box;*/
+/*    !*background-color: #3498db;*!*/
+/*}*/
+
+.ship > div {
+    width: 100%;
+    height: 100%;
+    border: 1px solid white;
+    box-sizing: border-box;
+    background-color: #3498db;
 }
 
 .ship.vertical {
-    /* Rotaciona e ajusta o tamanho para vertical */
-    transform: rotate(90deg);
+    display: flex;
+    flex-direction: column;
     width: 40px;
-    height: calc(40px * var(--size, 1));
-    line-height: 40px;
+    height: calc(40px * var(--size));
 }
 
 .shipyard {
@@ -109,8 +137,10 @@ td[data-state='ship'] {
 }
 
 .ship.horizontal {
-  display: flex;
-  flex-direction: row;
+    display: flex;
+    flex-direction: row;
+    width: calc(40px * var(--size));
+    height: 40px;
 }
 
 .ship.vertical {
