--- a/src/components/Game/Board.Component.css
+++ b/src/components/Game/Board.Component.css
@@ -77,43 +77,6 @@ td[data-state='hit']::after {
 td[data-state='ship'] {
   background-color: #3498db;
 }
-/* Navios */
-/*.ship {*/
-/*    display: inline-block;*/
-/*    background: #3498db;*/
-/*    color: #fff;*/
-/*    border-radius: 6px;*/
-/*    margin: 8px 0;*/
-/*    text-align: center;*/
-/*    cursor: grab;*/
-/*    font-weight: bold;*/
-/*    transition: transform 0.3s, width 0.3s, height 0.3s;*/
-/*    !* Tamanho base para navio horizontal *!*/
-/*    width: calc(40px * var(--size, 1));*/
-/*    height: 40px;*/
-/*    line-height: 40px;*/
-/*}*/
-
-/*.ship {*/
-/*    display: inline-block;*/
-/*    background: #3498db;*/
-/*    color: #fff;*/
-/*    border-radius: 6px;*/
-/*    margin: 8px 0;*/
-/*    text-align: center;*/
-/*    cursor: grab;*/
-/*    font-weight: bold;*/
-/*    transition: transform 0.3s, width 0.3s, height 0.3s;*/
-/*    !* Tamanho base para navio horizontal *!*/
-/*    !*width: calc(40px * var(--size, 1));*!*/
-/*    !*height: 40px;*!*/
-/*    line-height: 40px;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    border: 1px solid white;*/
-/*    box-sizing: border-box;*/
-/*    !*background-color: #3498db;*!*/
-/*}*/
 
 .ship > div {
     width: 100%;
@@ -155,3 +118,14 @@ td[data-state='ship'] {
 /* .invalid-drop {
   background-color: #ffcdd2 !important;
 } */
+
+.turn-status {
+    margin-top: 20px;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.2em;
+    font-weight: bold;
+    background-color: #f0f0f0;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
